added tag model

--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -1,9 +1,11 @@
 <div>
 <form action="/links" method="post">
-  Please enter a url:
+  <label>Enter Url:</label>
   <input type="text" name="url">
-  Please eneter a title:
+  <label>Enter Title:</label>
   <input type="text" name="title">
+  <label>Enter Tags:</label>
+  <input type="text" name="tag">
   <input type="submit" value="Create link">
 </form>
 </div>
