Added sign out and sign in functionality

--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -1,5 +1,17 @@
 <h1> Links </h1>
 
+<form action="/links/new">
+    <input type="submit" value="Add Links">
+</form>
+
+<form action="/users/new">
+    <input type="submit" value="Sign up">
+</form>
+
+<form action="/sessions/new">
+    <input type="submit" value="Sign in">
+</form>
+
 <ul id="links">
   <% @links.each do |link| %>
     <li>
